--- a/adimpage/src/App.css
+++ b/adimpage/src/App.css
@@ -1,72 +1,89 @@
+@import url(https://fonts.googleapis.com/css?family=Josefin+Slab:100,300,400,600,700);
+
 .App {
   text-align: center;
 }
 
 /*전체화면 배경색*/
+/* .btnLightBlue.btnBorder {
+  box-shadow: 0px 0px 0px 0px #0066FF;
+}
 
-.top-bar{
-  align-items:left;
+.btnLightBlue.btnBorder:hover {
+  box-shadow: 0px 0px 0px 5px #7aa7e9;
+} */
 
+.btnFade.btnLightBlue:hover {
+  background: #0448ad;
+}
+
+button {
+
+  font-family: 'Josefin Slab', serif;
+  width: 300px;
+  padding: 10px;
+  margin: 10px 20px 10px 0;
+  font-weight: 900;
+  text-align: center;
+  color: #FFF;
+  border-radius: 10px;
+  transition: all 0.2s ;
+  background-color:#0066FF;
+  border:none;
+  
+
+}
+
+div {
+  box-sizing: border-box;
+}
+
+ul {
+  list-style: none;
 }
 
 .menu-bar {
   background: #0066FF;
   color: white;
-  width: 150px;
+  width: 180px;
   height: 100vh;
   position: fixed;
   padding: 20px;
   z-index: 10;
 }
 
-
 .menu-bar div {
-  text-align:left;
-  margin: 12px 0px 0px -5px;
+  text-align: left;
+  margin: 25px 0px 0px -5px;
 }
 
-.menu-bar div:hover {
+.menu-bar :hover {
   cursor: pointer;
   color: black;
   transition: all 0.5s;
 }
 
 .menu-bar i {
-  margin-right:5px;
+  margin-right: 5px;
   font-size: 20px;
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
-}
 
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
+@media screen and (max-width : 768px) {
+  .menu-bar {
+    width: 100%;
+    height: 8vh;
   }
-}
 
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
-}
-
-.App-link {
-  color: #61dafb;
-}
-
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
+  .menu-bar div {
+    width: 25%;
+    float: left;
+    margin: auto;
   }
-  to {
-    transform: rotate(360deg);
+
+  .menu-bar ul {
+    margin-top: 20px;
+    color: black;
   }
+
 }
